--- a/pics/styles.css
+++ b/pics/styles.css
@@ -103,7 +103,7 @@ h2 {
     text-decoration: underline;
      border-style: solid;
      border-width: 5px;
-     border-color: #FFFFFF;
+     border-color: #000000;
   
 }
 
