--- a/pics/mobil.css
+++ b/pics/mobil.css
@@ -1,4 +1,4 @@
-@media only screen and (max-device-width: 480px) {
+@media only screen and (max-width: 480px) {
    
    
 #header{ max-width:100%;}
@@ -28,6 +28,9 @@ margin-bottom:0,5em;
 font-size:90%;
 max-width:100%;
 }
+
+
+select, input { height:25px; }
 
 h1 {font-size:90%; text-align:right;}
 
