--- a/pics/mobil.css
+++ b/pics/mobil.css
@@ -6,14 +6,15 @@
 
     
 #section,#container{ 
-    width: 350px;
+    width: 100%;
+    padding:0;
 }
 
 #footer{
     width:auto;
 }
 
-#nav{ width:350px;}
+#nav{ width:100%}
 
 video { max-width:100%;}
 
